simple landing - refactor - 02

--- a/index.html
+++ b/index.html
@@ -42,102 +42,102 @@
     </header>
 
 
-    <main id="Home">
-
-        <div class="main__title">
-            <div class="main__title__wrapper">
-                <h1>Дизайн и верстка</h1>
-                <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
-                    стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-                <button>НАПИСАТЬ МНЕ</button>
-            </div>
-        </div>
+    <!-- <main id="Home"> -->
 <!--  -->
-        <div class="about__title" id="About">
-            <div class="about__title__wrapper">
-                <h2>Обо мне</h2>
-                <p id="Work">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem
-                    Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-            </div>
-        </div>
-
-        <div class="portfolio">
-
-            <div class="portfolio__wrapper">
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-                <div class="work__card">
-                    <div class="work__card__icon"></div>
-                    <div class="work__card__wrapper">
-                        <h5>40+</h5>
-                        <p>проектов</p>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="service__title" id="Process">
-            <div class="service__title__wrapper">
-                <h2>Как я работаю</h2>
-                <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
-                    стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-            </div>
-        </div>
-
-        <div class="demo__video__wrapper">
-            <img src="/img/demo.png" alt="demo">
-            <div class="demo__video__icon"></div>
-        </div>
-
-    </main>
-
-    <footer id="Contact">
-        <div class="footer__wrapper">
-            <div class="footer__author">Andrii Zhyvov</div>
-            <div class="footer__protection">(с) 2024. Все права защищены.</div>
-        </div>
-    </footer>
+        <!-- <div class="main__title"> -->
+            <!-- <div class="main__title__wrapper"> -->
+                <!-- <h1>Дизайн и верстка</h1> -->
+                <!-- <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является -->
+                    <!-- стандартной "рыбой" для текстов на латинице с начала XVI века.</p> -->
+                <!-- <button>НАПИСАТЬ МНЕ</button> -->
+            <!-- </div> -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="about__title" id="About"> -->
+            <!-- <div class="about__title__wrapper"> -->
+                <!-- <h2>Обо мне</h2> -->
+                <!-- <p id="Work">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem -->
+                    <!-- Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p> -->
+            <!-- </div> -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="portfolio"> -->
+<!--  -->
+            <!-- <div class="portfolio__wrapper"> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+                <!-- <div class="work__card"> -->
+                    <!-- <div class="work__card__icon"></div> -->
+                    <!-- <div class="work__card__wrapper"> -->
+                        <!-- <h5>40+</h5> -->
+                        <!-- <p>проектов</p> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+<!--  -->
+            <!-- </div> -->
+<!--  -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="service__title" id="Process"> -->
+            <!-- <div class="service__title__wrapper"> -->
+                <!-- <h2>Как я работаю</h2> -->
+                <!-- <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является -->
+                    <!-- стандартной "рыбой" для текстов на латинице с начала XVI века.</p> -->
+            <!-- </div> -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="demo__video__wrapper"> -->
+            <!-- <img src="/img/demo.png" alt="demo"> -->
+            <!-- <div class="demo__video__icon"></div> -->
+        <!-- </div> -->
+<!--  -->
+    <!-- </main> -->
+<!--  -->
+    <!-- <footer id="Contact"> -->
+        <!-- <div class="footer__wrapper"> -->
+            <!-- <div class="footer__author">Andrii Zhyvov</div> -->
+            <!-- <div class="footer__protection">(с) 2024. Все права защищены.</div> -->
+        <!-- </div> -->
+    <!-- </footer> -->
 
 </body>
 
