simple landing - refactor - 04

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
 
-    <!-- <header> -->
-        <!-- <nav class="menu__wrapper"> -->
-            <!-- <ul class="menu"> -->
-                <!-- <li><a href="#Home">ГЛАВНАЯ</a></li> -->
-                <!-- <li><a href="#About">ОБ АВТОРЕ</a></li> -->
-                <!-- <li><a href="#Work">РАБОТЫ</a></li> -->
-                <!-- <li><a href="#Process">ПРОЦЕСС</a></li> -->
-                <!-- <li><a href="#Contact">КОНТАКТЫ</a></li> -->
-            <!-- </ul> -->
-        <!-- </nav> -->
+    <header>
+        <nav class="menu__wrapper">
+            <ul class="menu">
+                <li><a href="#Home">ГЛАВНАЯ</a></li>
+                <li><a href="#About">ОБ АВТОРЕ</a></li>
+                <li><a href="#Work">РАБОТЫ</a></li>
+                <li><a href="#Process">ПРОЦЕСС</a></li>
+                <li><a href="#Contact">КОНТАКТЫ</a></li>
+            </ul>
+        </nav>
 
         <!-- <nav class="menu__burger__wrapper"> -->
             <!-- <input type="checkbox" id="burger-checkbox" class="burger-checkbox"> -->
@@ -39,7 +39,7 @@
 <!--  -->
             <!-- </ul> -->
         <!-- </nav> -->
-  <!--   </header> -->
+    </header>
 
 
     <main id="Home">
