simple landing - burger - 01

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             </ul>
         </nav>
 
-        <!-- <nav class="menu__burger__wrapper"> -->
-            <!-- <input type="checkbox" id="burger-checkbox" class="burger-checkbox"> -->
-            <!-- <label for="burger-checkbox" class="burger"></label> -->
-            <!-- <ul class="menu-list"> -->
-                <!-- <li><a href="#Home" class="menu-item">ГЛАВНАЯ</a> -->
-                <!-- <li> -->
-                <!-- <li><a href="#About" class="menu-item">ОБ АВТОРЕ</a> -->
-                <!-- <li> -->
-                <!-- <li><a href="#Work" class="menu-item">РАБОТЫ</a> -->
-                <!-- <li> -->
-                <!-- <li><a href="#Process" class="menu-item">ПРОЦЕСС</a> -->
-                <!-- <li> -->
-                <!-- <li><a href="#Contact" class="menu-item">КОНТАКТЫ</a> -->
-                <!-- <li> -->
-<!--  -->
-            <!-- </ul> -->
-        <!-- </nav> -->
+        <nav class="menu__burger__wrapper">
+            <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+            <label for="burger-checkbox" class="burger"></label>
+            <ul class="menu-list">
+                <li><a href="#Home" class="menu-item">ГЛАВНАЯ</a>
+                <li>
+                <li><a href="#About" class="menu-item">ОБ АВТОРЕ</a>
+                <li>
+                <li><a href="#Work" class="menu-item">РАБОТЫ</a>
+                <li>
+                <li><a href="#Process" class="menu-item">ПРОЦЕСС</a>
+                <li>
+                <li><a href="#Contact" class="menu-item">КОНТАКТЫ</a>
+                <li>
+
+            </ul>
+        </nav>
     </header>
 
 
