simple landing - burger - 02

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Landing | SCSS Edition</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </nav>
 
         <nav class="menu__burger__wrapper">
-            <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+            <input type="checkbox" class="burger-checkbox">
             <label for="burger-checkbox" class="burger"></label>
             <ul class="menu-list">
                 <li><a href="#Home" class="menu-item">ГЛАВНАЯ</a>
@@ -36,8 +36,9 @@
                 <li>
                 <li><a href="#Contact" class="menu-item">КОНТАКТЫ</a>
                 <li>
-
             </ul>
+
+           
         </nav>
     </header>
 
