--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <div class="demo__video__wrapper">
-            <img src="/img/demo.png" alt="demo">
+            <img src="/scss-landing/img/demo.png" alt="demo">
             <div class="demo__video__icon"></div>
         </div>
 
